# RustAPI

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  QWEN.md  README.md
.github/: COMMIT_MESSAGE_GUIDELINES.md
src/: app.rs  http.rs  main.rs  models.rs
src/ui/: history_panel.rs  mod.rs  request_panel.rs  response_panel.rs
