[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28"
egui = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
poll-promise = { version = "0.3", features = ["tokio"] }
url = "2"
